fix bug 349714, r=rkent, sr=neil, remove new flag from cross-folder saved search when last new message is read